# CLION_PROJET_Demaret

./: CMakeLists.txt  Projet_BDDA_DEMARET  run.sh
CODE/: db_params.h  global.h  main.cpp
CODE/buffer_manager/: buffer_manager.cpp  buffer_manager.h  frame.h
CODE/disk_manager/: db_params.h  disk_manager.cpp  disk_manager.h  file.h  file_manager.cpp  filelist.h  functions.h  page_id.h
CODE/error_handler/: error.h  error_handler.cpp
CODE/interpreter/: functions.h  interpreter.cpp  interpreter.h  shell.cpp
CODE/relation_manager/: catalog.cpp  catalog.h  catalog_manager.cpp  column_info.h  record.cpp  record.h  relation_info.h
CODE/string_converter/: case_modifier.cpp  split.cpp  string_modifier.h
CODE/tests_manager/: test.cpp  test.h
CODE/utils/: case_modifier.cpp  split.cpp  util.h  write_read_buffer.cpp
DB/: fileslist.schema
